--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
